added relative build paths. started GUI

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.common.jar=/home/angelo/development/java/PI1/common/dist/common.jar
+file.reference.common.jar=../common/dist/common.jar
 includes=**
 jar.compress=false
 javac.classpath=\
