--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -29,12 +29,10 @@ dist.jar=${dist.dir}/server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.angelo-development=../../..
-file.reference.common.jar=/home/angelo/development/java/PI1/common/dist/common.jar
+file.reference.common.jar=../common/dist/common.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.angelo-development}:\
     ${file.reference.common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
