--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.common.jar=../common/dist/common.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.common.jar}
+    ${file.reference.common.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
