--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -30,11 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.common.jar=../common/dist/common.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=../libs/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.common.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
