--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.common.jar=../common/dist/common.jar
+file.reference.junit-4.10.jar=../libs/junit-4.10.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=../libs/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.common.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.junit-4.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,7 +48,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -74,7 +78,8 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.junit-4.10.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
